<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.CartActivity">

    <include
        android:id="@+id/tb_Cart"
        layout="@layout/layout_toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_CAnnouce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_cart"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/lv_CCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/total_cart"
            android:textColor="@color/my_Black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_CTotal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="right|center"
            android:text="0"
            android:textColor="@color/my_secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text="@string/currency"
            android:textColor="@color/my_secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_CPay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/blue_radius_buttton_selector"
        android:text="@string/pay"
        android:textColor="@color/my_white" />

    <Button
        android:id="@+id/btn_CContinue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/blue_radius_buttton_selector"
        android:text="@string/continue_cart"
        android:textColor="@color/my_white" />
</LinearLayout>