<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical"
            android:padding="@dimen/signin_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/my_white">

                <EditText
                    android:id="@+id/txt_SUName"
                    style="@style/textview_signup_information"
                    android:drawableLeft="@drawable/person_24dp"
                    android:drawableRight="@drawable/cancel_24dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/my_white">

                <EditText
                    android:id="@+id/txt_SUPhone"
                    style="@style/textview_signup_information"
                    android:drawableLeft="@drawable/phone_24dp"
                    android:drawableRight="@drawable/cancel_24dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/my_white">

                <EditText
                    android:id="@+id/txt_SUEmail"
                    style="@style/textview_signup_information"
                    android:drawableLeft="@drawable/email_24dp"
                    android:drawableRight="@drawable/cancel_24dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/my_white">

                <EditText
                    android:id="@+id/txt_SUAddress"
                    style="@style/textview_signup_information"
                    android:drawableLeft="@drawable/location24dp"
                    android:drawableRight="@drawable/cancel_24dp"
                    android:hint="@string/address"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/my_white">

                <EditText
                    android:id="@+id/txt_SUPass"
                    style="@style/textview_signup_information"
                    android:drawableLeft="@drawable/lock_24dp"
                    android:drawableRight="@drawable/visibility_off_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_SUSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/signin_button_margin_bottom"
                android:background="@drawable/radius_button_selector"
                android:text="@string/sign_up"
                android:textColor="@color/my_white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>