<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/cart_item_layout_margin"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_horizontal_line_height"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/img_CIImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/cart_item_image_height"
            android:layout_margin="@dimen/cart_item_image_margin"
            android:layout_weight="30"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/democlock" />

        <TextView
            android:layout_width="@dimen/small_vertical_line_width"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_CIProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cart_item_textview_margin"
                android:gravity="left"
                android:textColor="@color/my_Black"
                android:textSize="@dimen/annouce_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_CIProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cart_item_textview_margin"
                android:gravity="left"
                android:textColor="@color/my_secondary"
                android:textSize="@dimen/annouce_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_CIProductTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cart_item_textview_margin"
                android:gravity="left"
                android:textColor="@color/my_secondary"
                android:textSize="@dimen/annouce_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/cart_item_layout_margin_left"
                android:layout_marginRight="@dimen/cart_item_layout_margin_right"
                android:gravity="left"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_CIDecrease"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/decrease"
                    android:textSize="@dimen/cart_item_button_text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_CIQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@null"
                    android:text="@string/one"
                    android:textSize="@dimen/cart_item_button_text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_CIIncrease"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/increase"
                    android:textSize="@dimen/cart_item_button_text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/small_vertical_line_width"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <ImageButton
            android:id="@+id/btn_Delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:background="@null"
            android:src="@drawable/delete_32dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_horizontal_line_height"
        android:background="@color/line" />
</LinearLayout>