<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/product_layout_margin"
        app:cardCornerRadius="@dimen/product_layout_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_ItemClock"
                android:layout_width="@dimen/product_image_width"
                android:layout_height="@dimen/product_image_height"
                android:layout_margin="@dimen/product_image_layout_margin"
                android:adjustViewBounds="true"
                android:src="@drawable/democlock" />

            <TextView
                android:layout_width="@dimen/small_vertical_line_width"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_ItemProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/product_textview_layout_margin"
                    android:textColor="@color/my_Black"
                    android:textSize="@dimen/annouce_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_ItemProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/product_textview_layout_margin"
                    android:textColor="@color/my_secondary"
                    android:textSize="@dimen/annouce_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_ItemProductDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/product_textview_layout_margin"
                    android:textColor="@color/my_Black"
                    android:textSize="@dimen/product_detail_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/small_horizontal_line_height"
                    android:background="@color/line"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/product_image_button_layout_margin"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/product_image_button_layout_margin_right"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/btn_ItemProductAddToCard"
                            android:layout_width="@dimen/product_image_button_width"
                            android:layout_height="@dimen/product_image_button_height"
                            android:scaleType="fitCenter"
                            android:src="@drawable/add_shopping_cart_24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/product_image_layout_margin"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <Button
                            android:id="@+id/btn_ItemProductDecrease"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/product_image_button_height"
                            android:layout_weight="3"
                            android:background="@drawable/radius_button_selector"
                            android:text="@string/decrease"
                            android:textColor="@color/my_white"
                            android:textSize="@dimen/product_image_button_text_size"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_ItemProductQuantity"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/product_image_button_height"
                            android:layout_weight="4"
                            android:background="@null"
                            android:text="@string/one"
                            android:textColor="@color/my_Black"
                            android:textSize="@dimen/product_image_button_text_size"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_ItemProductIncrease"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/product_image_button_height"
                            android:layout_weight="3"
                            android:background="@drawable/radius_button_selector"
                            android:text="@string/increase"
                            android:textColor="@color/my_white"
                            android:textSize="@dimen/product_image_button_text_size"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>