<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/hot_product_layout_width"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/hot_product_layout_margin"
        app:cardCornerRadius="@dimen/hot_product_layout_radius">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_HPImage"
                    android:layout_width="@dimen/hot_product_image_width"
                    android:layout_height="@dimen/hot_product_image_height"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="@dimen/hot_product_layout_margin_top"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/democlock" />

                <TextView
                    android:id="@+id/txt_HPName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/hot_product_layout_margin_left"
                    android:layout_marginRight="@dimen/hot_product_layout_margin_right"
                    android:gravity="center"
                    android:textColor="@color/my_Black"
                    android:textSize="@dimen/annouce_text_size" />

                <TextView
                    android:id="@+id/txt_HPPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/hot_product_layout_margin_left"
                    android:layout_marginRight="@dimen/hot_product_layout_margin_right"
                    android:gravity="center"
                    android:textColor="@color/my_secondary"
                    android:textSize="@dimen/annouce_text_size" />

                <TextView
                    android:id="@+id/txt_HPDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/hot_product_layout_margin_bottom"
                    android:layout_marginLeft="@dimen/hot_product_layout_margin_left"
                    android:layout_marginRight="@dimen/hot_product_layout_margin_right"
                    android:gravity="center"
                    android:textColor="@color/my_Black"
                    android:textSize="@dimen/hot_product_detail_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_HPAddToCart"
                            android:layout_width="@dimen/hot_product_image_button_height"
                            android:layout_height="@dimen/hot_product_image_button_height"
                            android:layout_marginBottom="@dimen/hot_product_layout_margin_bottom"
                            android:layout_marginLeft="@dimen/hot_product_layout_margin_left"
                            android:background="@drawable/radius_button_selector"
                            android:scaleType="center"
                            android:src="@drawable/add_shopping_cart_24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:weightSum="4">

                        <ImageButton
                            android:id="@+id/btn_HPDecrease"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/hot_product_image_button_height"
                            android:layout_weight="1"
                            android:scaleType="center"
                            android:src="@drawable/remove_24dp"
                            android:text="@string/decrease"
                            android:textColor="@color/my_Black"
                            android:textSize="@dimen/annouce_text_size"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_HPQuantity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@null"
                            android:text="@string/one"
                            android:textColor="@color/my_Black"
                            android:textSize="@dimen/annouce_text_size"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/btn_HPIncrease"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/hot_product_image_button_height"
                            android:layout_weight="1"
                            android:scaleType="center"
                            android:src="@drawable/add_24dp"
                            android:text="@string/increase"
                            android:textColor="@color/my_Black"
                            android:textSize="@dimen/annouce_text_size"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/hot_product_image_button_width"
                android:layout_height="@dimen/hot_product_image_button_height"
                android:layout_gravity="top|right"
                android:src="@drawable/hot" />
        </FrameLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>